# iso-pulse-gen

./: BUILD_WINDOWS.md  CLAUDE.md  Isochronic_Pulse_Generator_PRD.md  implementation_tasks.md  main.py  pyproject.toml  test_audio_manual.py
.claude/commands/: work.md
.devcontainer/: Dockerfile  README.md  devcontainer.json
.github/workflows/: build-windows.yml
src/iso_pulse_gen/: __main__.py
src/iso_pulse_gen.dist-info/: METADATA  top_level.txt
src/iso_pulse_gen/audio/: generator.py  mock_backend.py  stream_manager.py
src/iso_pulse_gen/gui/: main_window.py
tests/: test_audio_generator.py
work-log/: 2025-06-29_audio_debug_fixes.md  2025-06-29_audio_device_selection.md  2025-06-29_audio_engine_implementation.md  2025-06-29_briefcase_setup.md  2025-06-29_devcontainer_setup.md  2025-06-29_project_setup.md  2025-06-29_windows_build_setup.md  2025-06-29_wsl_mock_backend.md
