[project]
name = "iso-pulse-gen"
version = "0.1.0"
description = "Desktop application for generating configurable isochronic audio pulses"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.26.0",
    "sounddevice>=0.4.6",
    "PySide6>=6.6.0",
]

[project.scripts]
iso-pulse-gen = "main:main"

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]
